# SASE_AQI_Drone

./: README.md  platformio.ini  pyproject.toml
.github/workflows/: ci.yml  deploy-pwa.yml
apps/aqi-bridge/: .env.example  docker-compose.yml  requirements.txt
apps/aqi-bridge/aqi_bridge/: api.py  app.py  ble.py  config.py
apps/aqi-bridge/docs/: README.md
apps/aqi-bridge/nginx/certs/: README.md
apps/aqi-bridge/nginx/conf.d/: default.conf
apps/aqi-bridge/tests/: test_auth_ws.py  test_imports.py  test_system_limits.py
apps/pwa/: .env.example  README.md  package.json
apps/pwa/src/: App.tsx
apps/pwa/src/components/: TelemetryPanel.tsx
apps/pwa/src/hooks/: useDroneLink.ts
docs/: production_readiness.md
firmware/aqi_drone_ble/: README.md  aqi_drone_ble.ino
include/: baromter.h  bluetooth.h  imu.h  main.h  motors.h  pid.h  states.h  ultrasonic.h  utils.h
src/: barometer.cpp  bluetooth.cpp  example_bluetooth.cpp  example_bluetooth_json.json  imu.cpp  main.cpp  motors.cpp  pid.cpp  states.cpp  ultrasonic.cpp  utils.cpp
